tried to add labs to portfolio website

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,12 +4,22 @@ project:
 
 website:
   title: "Alex Stauffer - MUSA 5080 Portfolio"
+  description: "empty" 
   navbar:
+  title: "Portfolio"
     left:
       - href: index.qmd
         text: Home
-      - href: weekly-notes/
-        text: Weekly Notes
+      - href: about.qmd
+        text: "About"
+      - text: "Weekly Notes"
+        menu:
+          - href: weekly-notes/
+            text: "All Notes"
+          - href: weekly-notes/week-01-notes.qmd
+            text: "Week 1"
+          - href: weekly-notes/week-02-notes.qmd
+            text: "Week 2"
 
 format:
   html:
