--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,17 +9,10 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - href: about.qmd
-        text: "About"
-      - href: weekly-notes/
-      - text: "Weekly Notes"
+      - text: Weekly Notes 
         menu:
-          - href: weekly-notes/
-            text: "All Notes"
           - href: weekly-notes/week-01-notes.qmd
-            text: "Week 1"
-          - href: weekly-notes/week-02-notes.qmd
-            text: "Week 2"
+            text: Week 1
 
 format:
   html:
