--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,10 +13,12 @@ website:
         menu:
           - href: weekly-notes/week-01-notes.qmd
             text: Week 1
+          - href: weekly-notes/week-02-notes.qmd
+            text: Week 2 
 
 format:
   html:
-    theme: cosmo
+    theme: superhero
     toc: true
     code-fold: true
 
