--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,7 +14,10 @@ website:
           - href: weekly-notes/week-01-notes.qmd
             text: Week 1
           - href: weekly-notes/week-02-notes.qmd
-            text: Week 2 
+            text: Week 2
+      - text: Labs
+        menu: 
+          - href: index.qmd
 
 format:
   html:
