--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,7 +17,10 @@ website:
             text: Week 2
       - text: Labs
         menu: 
-          - href: index.qmd
+          - href: labs/lab0_template.qmd
+            text: "Lab 0"
+          - href: labs/lab-01.qmd
+            text: "Lab 1"
 
 format:
   html:
