--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,10 @@ website:
             text: Week 1
           - href: weekly-notes/week-02-notes.qmd
             text: Week 2
+          - href: weekly-notes/week-03-notes.qmd
+            text: Week 3
+          - href: weekly-notes/week-04-notes.qmd
+            text: Week 4
       - text: Labs
         menu: 
           - href: labs/lab0_template.qmd
