trying to fix quarto HELP

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,10 +15,16 @@ website:
           text: Week 1
         - href: weekly-notes/week-02-notes.qmd
           text: Week 2
+        - href: weekly-notes/week-03-notes.qmd
+          text: Week 3
+        - href: weekly-notes/week-04-notes.qmd
+          text: Week 4
     - text: Labs
       menu:
-        - href: labs/lab0/scripts/lab0_template.qmd
+        - href: labs/lab0/lab0_template.qmd
           text: "Lab 0: dplyr Basics"
+        - href: labs/lab1/assignment1_template.qmd
+          text: "Lab 1: Census Data Exploration"
 
 format:
   html:
