--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,6 +17,8 @@ website:
           text: Week 2
         - href: weekly-notes/week-03-notes.qmd
           text: Week 3
+        - href: weekly-notes/week-04-notes.qmd
+          text: Week 4
     - text: Labs
       menu:
         - href: labs/lab0/lab0_template.qmd
