maybe it will get fixed

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -27,7 +27,7 @@ website:
           text: Week 7
     - text: Labs
       menu:
-        - href: labs/lab0/lab0_template.qmd
+        - href: labs/lab0/scripts/lab0_template.qmd
           text: "Lab 0: dplyr Basics"
         - href: labs/lab1/assignment1_template.qmd
           text: "Lab 1: Census Data Exploration"
@@ -44,3 +44,7 @@ format:
 
 execute:
   freeze: auto
+
+r:
+  path: "C:\\Program Files\\R\\R-4.5.1\\bin\\Rscript.exe"
+
